--- a/contact.html
+++ b/contact.html
@@ -113,6 +113,10 @@
     </nav>
     <!-- Main Navbar End -->
 
+    <section>
+      <h1>contact</h1>
+    </section>
+
     <!-- Contact Hero Start -->
     <section id="contact-hero">
       <div class="container">
