--- a/contact.html
+++ b/contact.html
@@ -115,6 +115,7 @@
 
     <section>
       <h1>contact</h1>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque tenetur omnis, natus nulla tempora magni expedita commodi a id quas dolore repellat ut earum. Quibusdam dolore recusandae incidunt quidem. Libero!</p>
     </section>
 
     <!-- Contact Hero Start -->
