--- a/index.html
+++ b/index.html
@@ -393,23 +393,70 @@
               >
                 <div class="about-header-text">
                   <div class="row portfolio-view">
-                    <div class="col-sm-6">
-                      <img
-                        src="./img/pbo-website-work.png"
-                        alt=""
-                        class="portfolio-work-img-1"
-                        height="800px"
-                        width="100%"
-                      />
+                    <div class="row portfolio-cards-item">
+                      <div class="col-lg-4">
+                        <div class="portfolio-card-list">
+                          <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                          <p>Pabna Online</p>
+                          <div class="portfolio-card-list-btn">
+                            <a href="#">Live Preview</a>
+                            <a href="#">View More</a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-4">
+                        <div class="portfolio-card-list">
+                          <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                          <p>Pabna Online</p>
+                          <div class="portfolio-card-list-btn">
+                            <a href="#">Live Preview</a>
+                            <a href="#">View More</a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-4">
+                        <div class="portfolio-card-list">
+                          <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                          <p>Pabna Online</p>
+                          <div class="portfolio-card-list-btn">
+                            <a href="#">Live Preview</a>
+                            <a href="#">View More</a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                    <div class="col-sm-6">
-                      <img
-                        src="./img/tuss-website-work.png"
-                        alt=""
-                        class="portfolio-work-img-2"
-                        height="680px"
-                        width="100%"
-                      />
+    
+                    <div class="row portfolio-cards-item">
+                      <div class="col-lg-4">
+                        <div class="portfolio-card-list">
+                          <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                          <p>Pabna Online</p>
+                          <div class="portfolio-card-list-btn">
+                            <a href="#">Live Preview</a>
+                            <a href="#">View More</a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-4">
+                        <div class="portfolio-card-list">
+                          <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                          <p>Pabna Online</p>
+                          <div class="portfolio-card-list-btn">
+                            <a href="#">Live Preview</a>
+                            <a href="#">View More</a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-4">
+                        <div class="portfolio-card-list">
+                          <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                          <p>Pabna Online</p>
+                          <div class="portfolio-card-list-btn">
+                            <a href="#">Live Preview</a>
+                            <a href="#">View More</a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -452,7 +499,7 @@
           <span></span>
           <span></span>
           <span></span>
-          বিস্তারিত পড়ুন...
+          বিস্তারিত দেখুন...
         </a>
       </div>
     </section>
