--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">হোম</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">হোম</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#our-works">আমাদের কাজসমূহ</a>
+              <a class="nav-link" href="./portfolio.html">আমাদের কাজসমূহ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./web-hosting.html">ওয়েব হোস্টিং</a>
@@ -86,22 +86,8 @@
               <a class="nav-link" href="./about.html">আমাদের সম্পর্কে</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#footer-contact">কোর্সসমূহ</a>
+              <a class="nav-link" href="#internship-course">কোর্সসমূহ</a>
             </li>
-            <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li> -->
           </ul>
           <a class="course-btn" href="./contact.html">যোগাযোগ</a>
         </div>
