--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#our-works">আমাদের কাজসমূহ</a>
+              <a class="nav-link active" href="./portfolio.html">আমাদের কাজসমূহ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./web-hosting.html">ওয়েব হোস্টিং</a>
@@ -90,20 +90,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#footer-contact">কোর্সসমূহ</a>
             </li>
-            <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li> -->
           </ul>
           <a class="course-btn" href="./contact.html">যোগাযোগ</a>
         </div>
