--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">হোম</a>
+              <a class="nav-link active" aria-current="page" href="./index.html"
+                >হোম</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./portfolio.html">আমাদের কাজসমূহ</a>
@@ -152,9 +154,6 @@
             </div>
           </div>
         </div>
-        <!-- <div class="service-more-btn m-auto text-center">
-                <a class="gradient-btn" href="#">আরো দেখুন...</a>
-            </div> -->
       </div>
     </section>
     <!-- Quick Services Section End -->
@@ -382,7 +381,10 @@
                     <div class="row portfolio-cards-item">
                       <div class="col-lg-4">
                         <div class="portfolio-card-list">
-                          <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                          <img
+                            src="./img/portfolio/portfolio-card-1.png"
+                            alt=""
+                          />
                           <p>Pabna Online</p>
                           <div class="portfolio-card-list-btn">
                             <a href="#">Live Preview</a>
@@ -392,7 +394,10 @@
                       </div>
                       <div class="col-lg-4">
                         <div class="portfolio-card-list">
-                          <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                          <img
+                            src="./img/portfolio/portfolio-card-1.png"
+                            alt=""
+                          />
                           <p>Pabna Online</p>
                           <div class="portfolio-card-list-btn">
                             <a href="#">Live Preview</a>
@@ -402,7 +407,10 @@
                       </div>
                       <div class="col-lg-4">
                         <div class="portfolio-card-list">
-                          <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                          <img
+                            src="./img/portfolio/portfolio-card-1.png"
+                            alt=""
+                          />
                           <p>Pabna Online</p>
                           <div class="portfolio-card-list-btn">
                             <a href="#">Live Preview</a>
@@ -411,11 +419,14 @@
                         </div>
                       </div>
                     </div>
-    
+
                     <div class="row portfolio-cards-item">
                       <div class="col-lg-4">
                         <div class="portfolio-card-list">
-                          <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                          <img
+                            src="./img/portfolio/portfolio-card-1.png"
+                            alt=""
+                          />
                           <p>Pabna Online</p>
                           <div class="portfolio-card-list-btn">
                             <a href="#">Live Preview</a>
@@ -425,7 +436,10 @@
                       </div>
                       <div class="col-lg-4">
                         <div class="portfolio-card-list">
-                          <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                          <img
+                            src="./img/portfolio/portfolio-card-1.png"
+                            alt=""
+                          />
                           <p>Pabna Online</p>
                           <div class="portfolio-card-list-btn">
                             <a href="#">Live Preview</a>
@@ -435,7 +449,10 @@
                       </div>
                       <div class="col-lg-4">
                         <div class="portfolio-card-list">
-                          <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                          <img
+                            src="./img/portfolio/portfolio-card-1.png"
+                            alt=""
+                          />
                           <p>Pabna Online</p>
                           <div class="portfolio-card-list-btn">
                             <a href="#">Live Preview</a>
@@ -480,7 +497,7 @@
         </div>
       </div>
       <div class="portfolio-btn m-auto text-center">
-        <a href="https://theultrasoundsource.com/contact/" class="more-btn">
+        <a href="./portfolio.html" class="more-btn">
           <span></span>
           <span></span>
           <span></span>
@@ -703,16 +720,13 @@
                 <img src="./img/tuss-logo.png" />
               </div>
               <div class="slide">
-                <img src="./img/explooro-logo-02 1.png" />
+                <img src="./img/apad-logo.png" />
               </div>
               <!-- <div class="slide">
                             <img src="./img/srbdc-logo.png">
                         </div> -->
               <div class="slide">
-                <img src="./img/tuss-logo.png" />
-              </div>
-              <div class="slide">
-                <img src="./img/explooro-logo-02 1.png" />
+                <img src="./img/cis-bd-logo.png" />
               </div>
             </div>
           </div>
