--- a/web-hosting.html
+++ b/web-hosting.html
@@ -36,12 +36,8 @@
     <!-- CDN Js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <!-- CDN Js -->
-
-
 </head>
-
 <body>
-
     <!-- Main Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container">
@@ -59,7 +55,7 @@
                         <a class="nav-link" aria-current="page" href="./index.html">হোম</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#our-works">আমাদের কাজসমূহ</a>
+                        <a class="nav-link" href="./portfolio.html">আমাদের কাজসমূহ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="./web-hosting.html">ওয়েব হোস্টিং</a>
