--- a/portfolio.html
+++ b/portfolio.html
@@ -176,8 +176,8 @@
                   </div>
                   <div class="col-lg-4">
                     <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-card-1.png" alt="" />
-                      <p>Pabna Online</p>
+                      <img src="./img/portfolio/portfolio-card-2.png" alt="" />
+                      <p>The Ultrasound</p>
                       <div class="portfolio-card-list-btn">
                         <a href="#">Live Preview</a>
                         <a href="#">View More</a>
@@ -186,41 +186,8 @@
                   </div>
                   <div class="col-lg-4">
                     <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-card-1.png" alt="" />
-                      <p>Pabna Online</p>
-                      <div class="portfolio-card-list-btn">
-                        <a href="#">Live Preview</a>
-                        <a href="#">View More</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="row portfolio-cards-item">
-                  <div class="col-lg-4">
-                    <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-card-1.png" alt="" />
-                      <p>Pabna Online</p>
-                      <div class="portfolio-card-list-btn">
-                        <a href="#">Live Preview</a>
-                        <a href="#">View More</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-4">
-                    <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-card-1.png" alt="" />
-                      <p>Pabna Online</p>
-                      <div class="portfolio-card-list-btn">
-                        <a href="#">Live Preview</a>
-                        <a href="#">View More</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-4">
-                    <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-card-1.png" alt="" />
-                      <p>Pabna Online</p>
+                      <img src="./img/portfolio/portfolio-card-3.png" alt="" />
+                      <p>Travnext</p>
                       <div class="portfolio-card-list-btn">
                         <a href="#">Live Preview</a>
                         <a href="#">View More</a>
@@ -232,8 +199,8 @@
                 <div class="row portfolio-cards-item">
                   <div class="col-lg-4">
                     <div class="portfolio-card-list">
-                      <img src="./img/portfolio/portfolio-card-1.png" alt="" />
-                      <p>Pabna Online</p>
+                      <img src="./img/portfolio/portfolio-card-2.png" alt="" />
+                      <p>The Ultrasound</p>
                       <div class="portfolio-card-list-btn">
                         <a href="#">Live Preview</a>
                         <a href="#">View More</a>
@@ -244,6 +211,39 @@
                     <div class="portfolio-card-list">
                       <img src="./img/portfolio/portfolio-card-1.png" alt="" />
                       <p>Pabna Online</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="#">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-4.png" alt="" />
+                      <p>Agencycare</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="#">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row portfolio-cards-item">
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-4.png" alt="" />
+                      <p>Agencycare</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="#">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-2.png" alt="" />
+                      <p>The Ultrasound</p>
                       <div class="portfolio-card-list-btn">
                         <a href="#">Live Preview</a>
                         <a href="#">View More</a>
