--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
                 <div class="quick-service-card">
                   <img src="./img/gd-icon.png" alt="" class="mb-3" />
                   <h5>গ্রাফিক্স ডিজাইন</h5>
+                  <div class="quick-service-border-circle">
+                    <div class="quick-service-border-circle-1">                     
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="col-sm text-center mb-4">
@@ -227,6 +231,18 @@
             <div class="service-card">
               <img src="./img/website-icon.png" alt="" class="pb-4 ps-4" />
               <h4 class="ps-4">ওয়েবসাইট<br />ডেভেলপমেন্ট</h4>
+              <div class="service-border-circle-top">
+                <div class="service-border-circle-top-1">
+                  <div class="service-border-circle-top-2">
+                  </div>
+                </div>
+              </div>
+              <div class="service-border-circle">
+                <div class="service-border-circle-1">
+                  <div class="service-border-circle-2">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -234,6 +250,18 @@
             <div class="service-card">
               <img src="./img/software-icon.png" alt="" class="pb-4 ps-4" />
               <h4 class="ps-4">সফটওয়্যার<br />ডেভেলপমেন্ট</h4>
+              <div class="service-border-circle-top">
+                <div class="service-border-circle-top-1">
+                  <div class="service-border-circle-top-2">
+                  </div>
+                </div>
+              </div>
+              <div class="service-border-circle">
+                <div class="service-border-circle-1">
+                  <div class="service-border-circle-2">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -241,6 +269,18 @@
             <div class="service-card">
               <img src="./img/software-icon.png" alt="" class="pb-4 ps-4" />
               <h4 class="ps-4">অ্যাপস<br />ডেভেলপমেন্ট</h4>
+              <div class="service-border-circle-top">
+                <div class="service-border-circle-top-1">
+                  <div class="service-border-circle-top-2">
+                  </div>
+                </div>
+              </div>
+              <div class="service-border-circle">
+                <div class="service-border-circle-1">
+                  <div class="service-border-circle-2">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -248,15 +288,39 @@
             <div class="service-card">
               <img src="./img/gd-icon.png" alt="" class="pb-4 ps-4" />
               <h4 class="ps-4">গ্রাফিক্স<br />ডিজাইন</h4>
+              <div class="service-border-circle-top">
+                <div class="service-border-circle-top-1">
+                  <div class="service-border-circle-top-2">
+                  </div>
+                </div>
+              </div>
+              <div class="service-border-circle">
+                <div class="service-border-circle-1">
+                  <div class="service-border-circle-2">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="row pt-5">
+        <div class="row pt-md-5">
           <div class="col-sm-3 col-md-3">
             <div class="service-card">
               <img src="./icons/ui-ux-icon.png" alt="" class="pb-4 ps-4" />
               <h4 class="ps-4">UI/UX<br />ডিজাইন</h4>
+              <div class="service-border-circle-top">
+                <div class="service-border-circle-top-1">
+                  <div class="service-border-circle-top-2">
+                  </div>
+                </div>
+              </div>
+              <div class="service-border-circle">
+                <div class="service-border-circle-1">
+                  <div class="service-border-circle-2">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-sm-3 col-md-3">
@@ -271,6 +335,18 @@
                   ওয়েব হোস্টিং<br />
                   ও সার্ভার
                 </h4>
+                <div class="service-border-circle-top">
+                  <div class="service-border-circle-top-1">
+                    <div class="service-border-circle-top-2">
+                    </div>
+                  </div>
+                </div>
+                <div class="service-border-circle">
+                  <div class="service-border-circle-1">
+                    <div class="service-border-circle-2">
+                    </div>
+                  </div>
+                </div>
               </div>
             </a>
           </div>
@@ -278,6 +354,18 @@
             <div class="service-card">
               <img src="./icons/Course-icon.png" alt="" class="pb-4 ps-4" />
               <h4 class="ps-4" style="padding-bottom: 32px">কোর্স/ ট্রেনিং</h4>
+              <div class="service-border-circle-top">
+                <div class="service-border-circle-top-1">
+                  <div class="service-border-circle-top-2">
+                  </div>
+                </div>
+              </div>
+              <div class="service-border-circle">
+                <div class="service-border-circle-1">
+                  <div class="service-border-circle-2">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-sm-3 col-md-3">
@@ -288,6 +376,18 @@
                 class="pb-4 ps-4"
               />
               <h4 class="ps-4">সোস্যাল মিডিয়া<br />ম্যানেজমেন্ট</h4>
+              <div class="service-border-circle-top">
+                <div class="service-border-circle-top-1">
+                  <div class="service-border-circle-top-2">
+                  </div>
+                </div>
+              </div>
+              <div class="service-border-circle">
+                <div class="service-border-circle-1">
+                  <div class="service-border-circle-2">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
