--- a/index.html
+++ b/index.html
@@ -135,24 +135,40 @@
                                 </a> -->
                   <img src="./img/software-icon.png" alt="" class="mb-3" />
                   <h5>সফটওয়্যার</h5>
+                  <div class="quick-service-border-circle">
+                    <div class="quick-service-border-circle-1">                     
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="col-sm text-center mb-4">
                 <div class="quick-service-card">
                   <img src="./img/website-icon.png" alt="" class="mb-3" />
                   <h5>ওয়েবসাইট</h5>
+                  <div class="quick-service-border-circle">
+                    <div class="quick-service-border-circle-1">                     
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="col-sm text-center mb-4">
                 <div class="quick-service-card">
                   <img src="./img/ui-ux-icon.png" alt="" class="mb-3" />
                   <h5>UI/UX ডিজাইন</h5>
+                  <div class="quick-service-border-circle">
+                    <div class="quick-service-border-circle-1">                     
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="col-sm text-center mb-4">
                 <div class="quick-service-card">
                   <img src="./img/Course-icon.png" alt="" class="mb-3" />
                   <h5>কোর্স/ট্রেনিং</h5>
+                  <div class="quick-service-border-circle">
+                    <div class="quick-service-border-circle-1">                     
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
