--- a/portfolio.html
+++ b/portfolio.html
@@ -169,7 +169,7 @@
                       <img src="./img/portfolio/portfolio-card-1.png" alt="" />
                       <p>Pabna Online</p>
                       <div class="portfolio-card-list-btn">
-                        <a href="#">Live Preview</a>
+                        <a href="https://pabnaonline.net/">Live Preview</a>
                         <a href="#">View More</a>
                       </div>
                     </div>
@@ -179,7 +179,7 @@
                       <img src="./img/portfolio/portfolio-card-2.png" alt="" />
                       <p>The Ultrasound</p>
                       <div class="portfolio-card-list-btn">
-                        <a href="#">Live Preview</a>
+                        <a href="https://theultrasoundsource.com/">Live Preview</a>
                         <a href="#">View More</a>
                       </div>
                     </div>
@@ -202,7 +202,7 @@
                       <img src="./img/portfolio/portfolio-card-2.png" alt="" />
                       <p>The Ultrasound</p>
                       <div class="portfolio-card-list-btn">
-                        <a href="#">Live Preview</a>
+                        <a href="https://theultrasoundsource.com/">Live Preview</a>
                         <a href="#">View More</a>
                       </div>
                     </div>
@@ -212,7 +212,7 @@
                       <img src="./img/portfolio/portfolio-card-1.png" alt="" />
                       <p>Pabna Online</p>
                       <div class="portfolio-card-list-btn">
-                        <a href="#">Live Preview</a>
+                        <a href="https://pabnaonline.net/">Live Preview</a>
                         <a href="#">View More</a>
                       </div>
                     </div>
@@ -245,7 +245,7 @@
                       <img src="./img/portfolio/portfolio-card-2.png" alt="" />
                       <p>The Ultrasound</p>
                       <div class="portfolio-card-list-btn">
-                        <a href="#">Live Preview</a>
+                        <a href="https://theultrasoundsource.com/">Live Preview</a>
                         <a href="#">View More</a>
                       </div>
                     </div>
@@ -255,7 +255,7 @@
                       <img src="./img/portfolio/portfolio-card-1.png" alt="" />
                       <p>Pabna Online</p>
                       <div class="portfolio-card-list-btn">
-                        <a href="#">Live Preview</a>
+                        <a href="https://pabnaonline.net/">Live Preview</a>
                         <a href="#">View More</a>
                       </div>
                     </div>
@@ -278,11 +278,106 @@
               </div>
 
               <div class="tab-pane fade" id="web-develop" role="tabpanel" aria-labelledby="web-develop-tab">
-                Web Development Coming soon...
+                <div class="row portfolio-cards-item">
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                      <p>Pabna Online</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="https://pabnaonline.net/">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-2.png" alt="" />
+                      <p>The Ultrasound</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="https://theultrasoundsource.com/">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-3.png" alt="" />
+                      <p>Travnext</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="#">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row portfolio-cards-item">
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                      <p>Pabna Online</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="https://pabnaonline.net/">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <!-- <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-2.png" alt="" />
+                      <p>The Ultrasound</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="#">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div> -->
+                  </div>
+                  <div class="col-lg-4">
+                    <!-- <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-3.png" alt="" />
+                      <p>Travnext</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="#">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div> -->
+                  </div>
+                </div>
               </div>
 
               <div class="tab-pane fade" id="graphics" role="tabpanel" aria-labelledby="graphics-tab">
-                Graphics Design Coming soon...
+                <!-- <div class="row portfolio-cards-item">
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/cnit-logo-bijoy-dibosh-01-01-01.jpg" height="250px">
+                      <p>Pabna Online</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="https://pabnaonline.net/">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-2.png" alt="" />
+                      <p>The Ultrasound</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="https://theultrasoundsource.com/">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-3.png" alt="" />
+                      <p>Travnext</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="#">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                </div> -->
               </div>
 
               <div class="tab-pane fade" id="uiux" role="tabpanel" aria-labelledby="uiux-tab">
