--- a/web-hosting.html
+++ b/web-hosting.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Hoisting - BDIX Connected</title>
+    <title>Web Hosting - BDIX Connected Web Hosting Service</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="./icons/cnit-favicon.png" type="image/x-icon">
@@ -66,20 +66,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#footer-contact">কোর্সসমূহ</a>
                     </li>
-                    <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li> -->
                 </ul>
                 <a class="course-btn" href="./contact.html">যোগাযোগ</a>
             </div>
@@ -95,7 +81,7 @@
                     <div class="hosting-hero-content justify-content-between">
                         <h1 class="hero-title">দ্রুত, নিরাপদ এবং শক্তিশালী<br> ওয়েব হোস্টিং</h1>
                         <p class="hero-text">
-                            আপনার ওয়েবসাইট এবং অ্যাপ্লিকেশনে সর্বোচ্চ কর্মক্ষমতা প্রদান করে!
+                            আপনার ওয়েবসাইট এবং অ্যাপ্লিকেশনে সর্বোচ্চ কর্মক্ষমতা দিন আমাদের ওয়েব হোস্টিং এর মাধ্যমে!
                         </p>
 
                         <div class="row">
@@ -135,7 +121,7 @@
                 <div class="col-sm-12">
                     <div class="hosting-header">
                         <h1 class="hosting-title">বাজেটের সাথে মানানসই প্যাকেজসমূহ</h1>
-                        <div class="text package-header-text">আমরা প্রত্যেকের জন্য একটি প্যাকেজ এবং মূল্য আছে!
+                        <div class="text package-header-text">বেছে নিন আপনার ব্যবসা বা পার্সোনাল ওয়েবসাইটের জন্য সঠিক প্যাকেজটি!
                             </p>
                         </div>
                     </div>
