--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
                 আমরা গড়ে তুলছি আমাদের নিজস্ব কিছু ডিজিটাল প্রোডাক্ট ও শক্তিশালী
                 পোর্টফলিও...
               </p>
-              <a href="#" class="about-hero-btn">
+              <a href="./contact.html" class="about-hero-btn">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -205,7 +205,7 @@
                 <img src="./img/about/team-avatar.png" />
               </div>
               <div class="teams-text">
-                <h3>Md. Ismail Hossion</h3>
+                <h3>মোঃ ইসমাঈল হোসাইন</h3>
                 <p>Founder & MD</p>
               </div>
               <div class="teams-social">
@@ -227,7 +227,7 @@
                 <img src="./img/about/team-avatar.png" />
               </div>
               <div class="teams-text">
-                <h3>Imtiaz Ahmed</h3>
+                <h3>ইমতিয়াজ আহমেদ</h3>
                 <p>Co- Founder & WebDeveloper</p>
               </div>
               <div class="teams-social">
@@ -249,7 +249,7 @@
                 <img src="./img/about/team-avatar.png" />
               </div>
               <div class="teams-text">
-                <h3>Anika Tabassum</h3>
+                <h3>আনিকা তাবাসসুম</h3>
                 <p>Cheif Admin Officer</p>
               </div>
               <div class="teams-social">
@@ -271,7 +271,7 @@
                 <img src="./img/about/team-avatar.png" />
               </div>
               <div class="teams-text">
-                <h3>Rahat Malitha</h3>
+                <h3>মোঃ রাহাত মালিথা</h3>
                 <p>Sr. Web Developer</p>
               </div>
               <div class="teams-social">
@@ -296,7 +296,7 @@
                 <img src="./img/about/team-avatar.png" />
               </div>
               <div class="teams-text">
-                <h3>Md. Robiul Islam</h3>
+                <h3>মোঃ রবিউল ইসলাম</h3>
                 <p>Web Designer</p>
               </div>
               <div class="teams-social">
@@ -318,7 +318,7 @@
                 <img src="./img/about/team-avatar.png" />
               </div>
               <div class="teams-text">
-                <h3>Adin Ahmed Tamim</h3>
+                <h3>আদিন আহমেদ তামিম</h3>
                 <p>UI/UX Designer</p>
               </div>
               <div class="teams-social">
@@ -340,7 +340,7 @@
                 <img src="./img/about/team-avatar.png" />
               </div>
               <div class="teams-text">
-                <h3>Merajul Islam</h3>
+                <h3>মিরাজুল ইসলাম</h3>
                 <p>UI/UX Designer</p>
               </div>
               <div class="teams-social">
@@ -362,7 +362,7 @@
                 <img src="./img/about/team-avatar.png" />
               </div>
               <div class="teams-text">
-                <h3>Moumita Afrose Prity</h3>
+                <h3>মৌমিতা আফরোজ প্রিতি</h3>
                 <p>Graphics Designer</p>
               </div>
               <div class="teams-social">
@@ -396,7 +396,7 @@
           </div>
           <div class="col-lg-3">
             <div class="news-latter-btn">
-              <a href="#">
+              <a href="./contact.html">
                 <span></span>
                 <span></span>
                 <span></span>
