--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
               <p class="float-lg-end">
                 আপনার প্রজেক্ট, আইডিয়া আমাদের সাথে শেয়ার করুন অথবা স্কিলড হতে...
               </p>
-              <a href="#" class="contact-hero-btn float-lg-end">
+              <a href="tel:01788428280" class="contact-hero-btn float-lg-end">
                 <span></span>
                 <span></span>
                 <span></span>
