--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             </div>
           </div>
           <div class="col-sm-3 col-md-3">
-            <a class="service-card-link" href="./cnit-hosting-landing.html">
+            <a class="service-card-link" href="./web-hosting.html">
               <div class="service-card">
                 <img
                   src="./icons/cloud-computing.png"
