--- a/portfolio.html
+++ b/portfolio.html
@@ -346,10 +346,10 @@
               </div>
 
               <div class="tab-pane fade" id="graphics" role="tabpanel" aria-labelledby="graphics-tab">
-                <!-- <div class="row portfolio-cards-item">
+                <div class="row portfolio-cards-item">
                   <div class="col-lg-4">
                     <div class="portfolio-card-list">
-                      <img src="./img/portfolio/cnit-logo-bijoy-dibosh-01-01-01.jpg" height="250px">
+                      <img src="./img/portfolio/portfolio-card-1.png" alt="" />
                       <p>Pabna Online</p>
                       <div class="portfolio-card-list-btn">
                         <a href="https://pabnaonline.net/">Live Preview</a>
@@ -377,11 +377,108 @@
                       </div>
                     </div>
                   </div>
-                </div> -->
+                </div>
+
+                <div class="row portfolio-cards-item">
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                      <p>Pabna Online</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="https://pabnaonline.net/">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <!-- <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-2.png" alt="" />
+                      <p>The Ultrasound</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="https://theultrasoundsource.com/">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div> -->
+                  </div>
+                  <div class="col-lg-4">
+                    <!-- <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-3.png" alt="" />
+                      <p>Travnext</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="#">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div> -->
+                  </div>
+                </div>
               </div>
 
               <div class="tab-pane fade" id="uiux" role="tabpanel" aria-labelledby="uiux-tab">
-                UI/UX Design Coming soon...
+                <div class="row portfolio-cards-item">
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                      <p>Pabna Online</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="https://pabnaonline.net/">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-2.png" alt="" />
+                      <p>The Ultrasound</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="https://theultrasoundsource.com/">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-3.png" alt="" />
+                      <p>Travnext</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="#">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row portfolio-cards-item">
+                  <div class="col-lg-4">
+                    <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-1.png" alt="" />
+                      <p>Pabna Online</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="https://pabnaonline.net/">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4">
+                    <!-- <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-2.png" alt="" />
+                      <p>The Ultrasound</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="https://theultrasoundsource.com/">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div> -->
+                  </div>
+                  <div class="col-lg-4">
+                    <!-- <div class="portfolio-card-list">
+                      <img src="./img/portfolio/portfolio-card-3.png" alt="" />
+                      <p>Travnext</p>
+                      <div class="portfolio-card-list-btn">
+                        <a href="#">Live Preview</a>
+                        <a href="#">View More</a>
+                      </div>
+                    </div> -->
+                  </div>
+                </div>
               </div>
             </div>
           </div>
