--- a/about.html
+++ b/about.html
@@ -205,11 +205,11 @@
                 <img src="./img/about/team-avatar.png" />
               </div>
               <div class="teams-text">
-                <h3>মোঃ ইসমাঈল হোসাইন</h3>
+                <h3>মোঃ ইসমাইল হোসাইন</h3>
                 <p>Founder & MD</p>
               </div>
               <div class="teams-social">
-                <a href="#">
+                <a href="https://www.facebook.com/ismailhossainnaiem">
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
@@ -231,7 +231,7 @@
                 <p>Co- Founder & WebDeveloper</p>
               </div>
               <div class="teams-social">
-                <a href="#">
+                <a href="https://www.facebook.com/solar.eclipse.1">
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
@@ -253,7 +253,7 @@
                 <p>Cheif Admin Officer</p>
               </div>
               <div class="teams-social">
-                <a href="#">
+                <a href="https://www.facebook.com/annisamth">
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
@@ -271,17 +271,18 @@
                 <img src="./img/about/team-avatar.png" />
               </div>
               <div class="teams-text">
-                <h3>মোঃ রাহাত মালিথা</h3>
+                <h3>মোহাম্মদ রাহাত</h3>
                 <p>Sr. Web Developer</p>
               </div>
               <div class="teams-social">
-                <a href="#">
+                <a href="https://www.facebook.com/profile.php?id=100055058377971">
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
                   <i class="fa-brands fa-twitter"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.linkedin.com/in/rahat-cnits-82177a258/
+                ">
                   <i class="fa-brands fa-linkedin"></i>
                 </a>
               </div>
@@ -318,11 +319,11 @@
                 <img src="./img/about/team-avatar.png" />
               </div>
               <div class="teams-text">
-                <h3>আদিন আহমেদ তামিম</h3>
+                <h3>এদিন আহমেদ তামিম</h3>
                 <p>UI/UX Designer</p>
               </div>
               <div class="teams-social">
-                <a href="#">
+                <a href="https://www.facebook.com/profile.php?id=100013801309542">
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
@@ -344,7 +345,7 @@
                 <p>UI/UX Designer</p>
               </div>
               <div class="teams-social">
-                <a href="#">
+                <a href="https://www.facebook.com/mi.rahul.520">
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
@@ -366,7 +367,7 @@
                 <p>Graphics Designer</p>
               </div>
               <div class="teams-social">
-                <a href="#">
+                <a href="https://www.facebook.com/sabihatabassum.orthy">
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#">
