--- a/about.html
+++ b/about.html
@@ -90,20 +90,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#footer-contact">কোর্সসমূহ</a>
             </li>
-            <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li> -->
           </ul>
           <a class="course-btn" href="./contact.html">যোগাযোগ</a>
         </div>
@@ -205,8 +191,8 @@
                 <img src="./img/about/team-avatar.png" />
               </div>
               <div class="teams-text">
-                <h3>মোঃ ইসমাঈল হোসাইন</h3>
-                <p>Founder & MD</p>
+                <h3>মোঃ ইসমাইল হোসেন</h3>
+                <p>প্রতিষ্ঠাতা ও এম.ডি</p>
               </div>
               <div class="teams-social">
                 <a href="#">
@@ -224,11 +210,11 @@
           <div class="col-lg-3">
             <div class="teams-card">
               <div class="teams-image">
-                <img src="./img/about/team-avatar.png" />
+                <img src="./img/teams/imtiaz-ahmed-ceo-profile.jpg" />
               </div>
               <div class="teams-text">
                 <h3>ইমতিয়াজ আহমেদ</h3>
-                <p>Co- Founder & WebDeveloper</p>
+                <p>সহ-প্রতিষ্ঠাতা ও ওয়েব ডেভেলপার</p>
               </div>
               <div class="teams-social">
                 <a href="#">
